--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>hello world</title>
 </head>
 <body>
+   <header>
+     <h1>Hello World</h1>
+    <p>Que bom te ver aqui, fulano</p>
     
+   </header> 
+
 </body>
 </html>
