--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello world</title>
+    <title>Hello Worldss</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header>
-     <h1>Hello World</h1>
-    <p>Que bom te ver aqui, fulano</p>
     
-   </header> 
-
+    <header>
+        <h1>Hello World</h1>
+        <p> Que bom ter ver aqui, <span id="nome-usuario"> Fulano </span></p>
+        
+    </header>
+<section>
+    <h2>HTML</h2>
+<p> <span class="texto-ingles" Hipertext markup language> </span>- Linguagem de Marcação de Hipertexto, estrutura a sua página web </p>
+<h2>CSS</h2>
+<p> <span class="texto ingles" Cascading Style Sheets> </span>- Folha de estilo em Cascata, estrutura a sua página web</p>
+<img src="img/Olá Mundo.png" alt="Nessa imagem aparece o planeta Terra com a escrita Olá mundo no centro, e ao seu redor consiste nas palavras, HTML, CSS e JavaScript.">
+</section>
+<footer>
+    <p>Uma página desenvolvida por Alura Start e Carol.</p>
+</footer>
 </body>
 </html>
